$Id$
Version 1.1.3+CVS (?? ??? 2006)
 - Fixed bug [ 1643240 ] 'about.php' cannot be used if using NO 'Top-Menu'
 - Fixed bug [ 1638019 ] Annual repeating events for the last day in Feb don't appear
 - Fixed bug [ 1636312 ] Notice: Undefined index: USER_PUBLISH_ENABLED
 - Fixed bug [ 1636026 ] missing user= in weekview links for other user's cal
 - Added VTIMEZONE capture and reuse logic
 - Added CAPTCHA validation option  to Public Access event creation
 - Fixed bug [ 1629758 ] Edit Event goes to Add Event
 - Fixed bug [ 1631416 ] Reports not displayed for 'Public Access' using UAC
 - Fixed bug [ 1631478 ] Edit/Add Layer has the same 'Headline' and no <br>
 - Fixed bug [ 1631492 ] OK-Button of pop-up color.php doesn't work properly
 - Fixed bug [ 1631505 ] categories are activated although not definied using categor
 - Fixed bug [ 1627932 ] issue sorting untimed events in month view
 - Fixed bug [ 1620626 ] Self Register broke in v1.1.2 (requires public)
 - Fixed bug [ 1623662 ] Additional Timezone for ical parsing logic
 - Fixed bug: gradient backgrounds would fail if images/cache is not
   writable due to bug in PHP's is_writeable function.
 - Fixed bug [ Help / Troubleshooting] Help needed getting Webcalendar to work
 - Fixed bug [ 1610640 ] changing option-description of 'advanced search' for a
 - Fixed bug [ 1615563 ] user can remove his own admin-permisssions
 - Updated Basque translation (based on 1.0 update)
 - Fixed bug [ 1618864 ] EXTRA_SELECTION_LIST versus EXTRA_SELECTLIST in site_extras
 - Fixed bug [ 1615896 ] Repeating Event Exclusions Broken
 - Fixed bug [ 1617800 ] 'Update Task Precentage' doesn't create activity log
 - Fixed bug [ 1618335 ] "Column 'cal_is_public' cannot be null" when adding NUC
 - Fixed bug [ 1617805 ] missing LINK to Craig's site if using 'top-menue'
 - Fixed bug [ 1617595 ] edit_template.php Error
 - Fixed bug [ 1617983 ] 'previous' and 'next' arrows didn't work at 'pop-up'-minical
Version 1.1.2 (18 Dec 2006)