@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Added option to display end times in calendars
  - Fixed bug [ 1643240 ] 'about.php' cannot be used if using NO 'Top-Menu'
  - Fixed bug [ 1638019 ] Annual repeating events for the last day in Feb don't appear
  - Fixed bug [ 1636312 ] Notice: Undefined index: USER_PUBLISH_ENABLED
